# naomesh-onion-orchestrator

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  README.rst  docker-compose.yml  g5kecotype-node-docker-compose.yml  g5kecotype-node-entry-playbook.yml  g5kecotype-node-finish-playbook.yml  g5kecotype-node-step-playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.chglog/: config.yml
.github/workflows/: action-prod.yml
docs/: index.rst  orion-ochestrator-async-api.yaml
naomesh/: __init__.py  cli.py
patches/: patch-orion.diff
src/: auth.py  main.py  runme.py
src/app/: _version.py  constants.py  tasks.py
src/app/client/: subscriber.py
src/app/core/: config.py
src/app/enoslib/: login.py  utils.py
src/app/models/: connection.py  results.py
src/app/orion/: config.py  database.py  naomesh_orchestration_policy.py  policy.py
src/app/process/: login.py  pipeline.py  tasks.py
src/app/scheduler/: deployments.py  flows.py  runner.py  tasks.py  utils.py
src/app/seduce/: __init__.py  client.py  errors.py
src/app/seduce/api/default/: get_live_consumption_of_all_nodes.py  get_live_production_solar_panels.py  get_production_solar_panels.py
src/app/seduce/api/node/: get_consumption_of_node.py  get_consumption_of_node_historical.py  get_live_consumption_of_node.py
src/app/seduce/models/: __init__.py  get_consumption_of_node_historical_response_200.py  get_consumption_of_node_historical_response_200_data_item.py  get_consumption_of_node_response_200.py  get_live_consumption_of_all_nodes_response_200.py  get_live_consumption_of_node_response_200.py  get_live_production_solar_panels_response_200.py  get_production_solar_panels_response_200.py
src/app/services/: __init__.py  amqp.py  current_allocated_nodes.py  currentallocatednodes.py  jobs.py  json_base.py  options.py  utils.py
src/app/tests/unit/: test_naomesh.py
src/docs/: conf.py
src/prefect/: engine.py  flows.py
src/prefect/orion/orchestration/: core_policy.py
src/prefect/orion/ui/assets/: index-1ad4f081-98325998.js  index-2d9d27aa.css  viewport.es-a6380c41-c9ec99f3-a4df50e5.js
uploads/: test_payload_request bad_bypass.json  test_payload_request.json
