[project]
name="naomesh-onion-orchestrator"
version="0.0.1"


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/app/_version.py"
versionfile_build = "build/lib/app/_.py"
tag_prefix = "naomesh-onion-orchestrator-"
parentdir_prefix = "naomesh-onion-orchestrator-"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[tool.mypy]
plugins = ["pydantic.mypy", "sqlmypy"]
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.flake8]
max-line-length = 79
exclude = [".git","__pycache__","__init__.py",".mypy_cache",".pytest_cache"]