[metadata]
name = Naomesh
version = 0.0.1
keywords = enoslib, evaluation, reproducible research, Grid5000, Chameleon Cloud, Vagrant
license_file = LICENSE.txt
url = 
author = Naomesh team
author_email = magnesie-v3@proton.me
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
   enoslib~=6.0.0a10
   click>=6.7,<7

[options.packages.find]
exclude =
    docs

[options.entry_points]
console_scripts =
    naomesh = naomesh.cli:cli

[bdist_wheel]
universal=1
